--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -6,7 +6,11 @@
     <title>Pòsicionamentos</title>
     <style>
         body {
+            height: 97vh;
+            width: 97vh;
             background-image: url(images/wallpaper003.jpg);
+            background-repeat: no-repeat;
+            background-position: center center;
         }
     </style>
 </head>
