--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,25 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 97.5vh;
+            /*
             background-color: black;
             background-image: url(images/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-            /* background-size: contain; */
+            --- background-size: contain; ---
+            background-attachment: fixed; */
+           
+
+            /* Shorthand - Background 
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url('images/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 2px solid black;
             border-radius: 15px;
+        }
+
+        main p {
+            text-align: justify;
         }
     </style>
 </head>
@@ -30,6 +44,13 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eveniet et laboriosam amet quasi mollitia cupiditate sapiente, veniam, sequi officia, iusto ab provident aspernatur maiores suscipit quia beatae sint quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eaque dolorum error sequi? Facere quam, eaque voluptatibus, temporibus ducimus at nobis tenetur rerum totam dolor porro molestias, incidunt sequi harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla odit rem consequatur quae dignissimos dolores aliquam numquam eos natus omnis assumenda ullam, quisquam hic recusandae possimus minus fuga eum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eveniet et laboriosam amet quasi mollitia cupiditate sapiente, veniam, sequi officia, iusto ab provident aspernatur maiores suscipit quia beatae sint quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eaque dolorum error sequi? Facere quam, eaque voluptatibus, temporibus ducimus at nobis tenetur rerum totam dolor porro molestias, incidunt sequi harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla odit rem consequatur quae dignissimos dolores aliquam numquam eos natus omnis assumenda ullam, quisquam hic recusandae possimus minus fuga eum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eveniet et laboriosam amet quasi mollitia cupiditate sapiente, veniam, sequi officia, iusto ab provident aspernatur maiores suscipit quia beatae sint quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eaque dolorum error sequi? Facere quam, eaque voluptatibus, temporibus ducimus at nobis tenetur rerum totam dolor porro molestias, incidunt sequi harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla odit rem consequatur quae dignissimos dolores aliquam numquam eos natus omnis assumenda ullam, quisquam hic recusandae possimus minus fuga eum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eveniet et laboriosam amet quasi mollitia cupiditate sapiente, veniam, sequi officia, iusto ab provident aspernatur maiores suscipit quia beatae sint quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eaque dolorum error sequi? Facere quam, eaque voluptatibus, temporibus ducimus at nobis tenetur rerum totam dolor porro molestias, incidunt sequi harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla odit rem consequatur quae dignissimos dolores aliquam numquam eos natus omnis assumenda ullam, quisquam hic recusandae possimus minus fuga eum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eveniet et laboriosam amet quasi mollitia cupiditate sapiente, veniam, sequi officia, iusto ab provident aspernatur maiores suscipit quia beatae sint quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eaque dolorum error sequi? Facere quam, eaque voluptatibus, temporibus ducimus at nobis tenetur rerum totam dolor porro molestias, incidunt sequi harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla odit rem consequatur quae dignissimos dolores aliquam numquam eos natus omnis assumenda ullam, quisquam hic recusandae possimus minus fuga eum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eveniet et laboriosam amet quasi mollitia cupiditate sapiente, veniam, sequi officia, iusto ab provident aspernatur maiores suscipit quia beatae sint quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eaque dolorum error sequi? Facere quam, eaque voluptatibus, temporibus ducimus at nobis tenetur rerum totam dolor porro molestias, incidunt sequi harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla odit rem consequatur quae dignissimos dolores aliquam numquam eos natus omnis assumenda ullam, quisquam hic recusandae possimus minus fuga eum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eveniet et laboriosam amet quasi mollitia cupiditate sapiente, veniam, sequi officia, iusto ab provident aspernatur maiores suscipit quia beatae sint quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eaque dolorum error sequi? Facere quam, eaque voluptatibus, temporibus ducimus at nobis tenetur rerum totam dolor porro molestias, incidunt sequi harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla odit rem consequatur quae dignissimos dolores aliquam numquam eos natus omnis assumenda ullam, quisquam hic recusandae possimus minus fuga eum!</p>
+
     </main>
 </body>
 </html>
