--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -6,22 +6,33 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Estudos de iframe</title>
     <style>
-        
+        iframe {
+            width: 300px;
+            height: 100px;
+        }
     </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
+    <!-- Tamanho padrão 300x150 -->
     <p>
         Acessando o sistema do
 
-        <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com/" frameborder="0">
+            [ SEU NAVEGADOR NÃO É COMPATÍVEL - CLIQUE E <a href="https://www.cursoemvideo.com/">ACESSE O SITE</a> ]
+        </iframe>
 
         para aprender a programar
     </p>
     <p>
+        Iframe do google <iframe src="https://google.com" frameborder="0">
+            [ SEU NAVEGADOR NÃO É COMPATÍVEL - CLIQUE E <a href="https://google.com">ACESSE O SITE</a> ]
+        </iframe>
+    </p>
+    <p>
         O repositório do Guanabara
 
-        <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+        <iframe scrolling="no" height="500" width="500" src="https://gustavoguanabara.github.io" frameborder="0">
 
         </iframe>
 
