--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>Teste com iframe</title>
     <style>
-        
+        iframe {
+            display: block;
+            margin: auto;
+            width: 500px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
-    
+    <h1>Teste com iframe</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta quam itaque eius animi fuga tenetur molestias nihil nesciunt, aliquid ab, ullam esse sequi cum repellendus excepturi aut exercitationem sed.</p>
+
+    <iframe src="pastas-extras/pag001.html" frameborder="0">[ Infelizmente seu navegador não é compativel ]</iframe>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius doloribus unde magnam nulla ut exercitationem esse excepturi, odio pariatur, incidunt aperiam, totam sed laborum soluta? Placeat nisi voluptatum atque suscipit?</p>
 </body>
 </html>
