--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -13,7 +13,9 @@
         iframe {
             width: 95vw;
             border: 2px solid black;
+            background-color: aquamarine;
         }
+
     </style>
 </head>
 <body>
@@ -28,7 +30,9 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quia voluptatem praesentium voluptas debitis doloribus, accusamus consequuntur odio repudiandae temporibus necessitatibus aspernatur modi vitae tenetur totam, voluptatum sint dolorem iste.</p>
 
-    <iframe name="frame" src=""></iframe>
+    <iframe name="frame" srcdoc="<img src='imagens/cursoemvideo-logo-branca.png' width='200px' alt='logo-branca'><br><h1>Escolha um dos links acima</h1><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo expedita laborum, nulla ex aspernatur voluptas, libero molestiae maxime totam ipsum sapiente aliquam dignissimos minus enim neque possimus placeat sint quis.</p>"></iframe>
+
+    
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores corrupti error, similique nihil quis a doloribus dolorum. Sapiente aliquam, omnis nemo minus necessitatibus fugit dolorum esse, dolorem praesentium, repellat velit!</p>
 </body>
