--- a/desafios/d999/home.html
+++ b/desafios/d999/home.html
@@ -11,6 +11,7 @@
         }
 
         body {
+            background-color: white;
             background-image: url(imagens/tela-home.jpg);
             background-repeat: no-repeat;
             background-size: cover;
