--- a/desafios/d999/youtube.html
+++ b/desafios/d999/youtube.html
@@ -4,42 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/social.css">
     <title>YouTube</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-        }
-
-        body {
-            background-color: white;
-        }
-
-        img {
-            width: 250px;
-        }
-
-        a {
-            display: block;
-            background-color: #8B0000;
-            color: white;
-            font-family: Arial, Helvetica, sans-serif;
-            font-weight: bolder;
-            padding: 20px 0px;
-            text-align: center;
-            text-decoration: none;
-            width: 246px;
-            margin-top: -4px;
-            border: solid 2px black;
-        }
-
-        a:hover {
-            background-color: red;
-        }
-    </style>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="img-tela-youtube">
+    <div><img src="imagens/tela-youtube.png" alt="img-tela-youtube"></div>
     <a href="#" target="_blank">ACESSE</a>
+
+    <script>
+
+        function scroll(x, y) {
+        document.body.scrollLeft += x;
+        document.body.scrollTop += y;
+        }
+
+        window.addEventListener("scroll", scroll);
+
+    </script>
 </body>
 </html>
