--- a/desafios/d999/index.html
+++ b/desafios/d999/index.html
@@ -4,69 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/index.css">
     <title>Redes Sociais</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background-image: url(imagens/fundo-madeira.jpg);
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center center;
-        }
-
-        #telefone {
-            background-image: url(imagens/frame-iphone.png);
-            background-repeat: no-repeat;
-            height: 627px;
-            width: 311px;
-
-            position: absolute;
-            top: 50%;
-            left: 50%;
-
-            transform: translate(-50%, -50%);
-        }
-
-        iframe {
-            width: 267px;
-            height: 471px;
-
-            position: relative;
-            top: 80px;
-            left: 22px;
-
-            border: 1px solid white;
-        }
-
-        #social {
-            text-align: right;
-        }
-
-        ul {
-            list-style-type: none;
-        }
-
-        li img {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            margin: 10px;
-            box-shadow: 2px 2px 5px black;
-        }
-
-        li img:hover {
-            box-shadow: 4px 4px 10px black;
-            border: solid 1px white;
-            margin-bottom: 8px;
-        }
-
-
-    </style>
 </head>
 <body>
     <main>
@@ -74,14 +13,14 @@
             <iframe src="home.html" name="display" frameborder="0" scrolling="auto"></iframe>
         </section>
         <section id="social">
-            <ul>
-                <li><a href="home.html" target="display"><img src="imagens/logo-home.jpg" alt="img-home"></a></li>
-                <li><a href="github.html" target="display"><img src="imagens/logo-github.jpg" alt="img-github"></a></li>
-                <li><a href="youtube.html" target="display"><img src="imagens/logo-youtube.jpg" alt="img-youtube"></a></li>
-                <li><a href="instagram.html" target="display"><img src="imagens/logo-instagram.jpg" alt="img-instagram"></a></li>
-                <li><a href="twitter.html" target="display"><img src="imagens/logo-twitter.jpg" alt="img-twitter"></a></li>
-                <li><a href="facebook.html" target="display"><img src="imagens/logo-facebook.jpg" alt="img-facebook"></a></li>
-            </ul>
+                <ul>
+                    <li><a href="home.html" target="display"><img src="imagens/logo-home.jpg" alt="img-home"></a></li>
+                    <li><a href="github.html" target="display"><img src="imagens/logo-github.jpg" alt="img-github"></a></li>
+                    <li><a href="youtube.html" target="display"><img src="imagens/logo-youtube.jpg" alt="img-youtube"></a></li>
+                    <li><a href="instagram.html" target="display"><img src="imagens/logo-instagram.jpg" alt="img-instagram"></a></li>
+                    <li><a href="twitter.html" target="display"><img src="imagens/logo-twitter.jpg" alt="img-twitter"></a></li>
+                    <li><a href="facebook.html" target="display"><img src="imagens/logo-facebook.jpg" alt="img-facebook"></a></li>
+                </ul>
         </section>
     </main>
 </body>
