--- a/exercicios/ex026/imagens/mq004/index.html
+++ b/exercicios/ex026/imagens/mq004/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
     <title>Media Query</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Testando media Queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="icone telefone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="icone tablet">
+        <img id="print" src="imagens/icon-print.png" alt="icone impressora">
+        <img id="pc" src="imagens/icon-pc.png" alt="icone desktop">
+        <img id="tv" src="imagens/icon-tv.png" alt="icone para tv">
+    </main>
 </body>
 </html>
