--- a/exercicios/ex026/imagens/mq005/index.html
+++ b/exercicios/ex026/imagens/mq005/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/media-query.css" media="all">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Media Query</title>
     <style>
         
@@ -14,19 +15,33 @@
 <body>
     <header>
         <h1>Meu Site</h1>
-        <nav>
-            <a href="#"><p>Opção 1</p></a>
-            <a href="#"><p>Opção 2</p></a>
-            <a href="#"><p>Opção 3</p></a>
-            <a href="#"><p>Opção 4</p></a>
-            <a href="#"><p>Opção 5</p></a>
-        </nav>
+        <span id="menu-logo" class="material-symbols-outlined" onclick="clickMenu()">Menu</span>
+        <menu id="menuclick">
+            <ul>
+                <li><a href="#"><p>Opção 1</p></a></li>
+                <li><a href="#"><p>Opção 2</p></a></li>
+                <li><a href="#"><p>Opção 3</p></a></li>
+                <li><a href="#"><p>Opção 4</p></a></li>
+                <li><a href="#"><p>Opção 5</p></a></li>
+            </ul>
+        </menu>
     </header>
     <main>
-        <h1>Testando Media Queries</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore nostrum voluptates voluptatum fugiat magni, error, commodi aliquam dolore tempore praesentium modi quibusdam rerum. Voluptas quod, quasi dignissimos beatae quaerat autem!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At similique, temporibus excepturi praesentium id voluptatum. Beatae, eveniet qui natus, consequatur ipsa omnis, sunt blanditiis architecto fuga odio exercitationem a nostrum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui repudiandae neque, magnam obcaecati optio doloribus aperiam repellendus tempora! Modi porro est voluptates dolorem molestiae repellat a ipsam beatae cum quod.</p>
+        <article>
+            <h2>Testando Media Queries</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore nostrum voluptates voluptatum fugiat magni, error, commodi aliquam dolore tempore praesentium modi quibusdam rerum. Voluptas quod, quasi dignissimos beatae quaerat autem!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At similique, temporibus excepturi praesentium id voluptatum. Beatae, eveniet qui natus, consequatur ipsa omnis, sunt blanditiis architecto fuga odio exercitationem a nostrum?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui repudiandae neque, magnam obcaecati optio doloribus aperiam repellendus tempora! Modi porro est voluptates dolorem molestiae repellat a ipsam beatae cum quod.</p>
+        </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (menuclick.style.display == 'block') {
+                menuclick.style.display = 'none'
+            } else {
+                menuclick.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
